tests/baselines/reference/incorrectNumberOfTypeArgumentsDuringErrorReporting.errors.txt
tests/cases/compiler/incorrectNumberOfTypeArgumentsDuringErrorReporting.ts(18,4): error TS2559: Type 'MyObjA' has no properties in common with type 'ObjA'.


==== tests/cases/compiler/incorrectNumberOfTypeArgumentsDuringErrorReporting.ts (1 errors) ====
    interface ObjA {
      y?:string,
    }
    
    interface ObjB {[key:string]:any}
    
    interface Opts<A, B> {a:A, b:B}
    
    const fn = <
      A extends ObjA,
      B extends ObjB = ObjB
    >(opts:Opts<A, B>):string => 'Z'
    
    interface MyObjA {
      x:string,
    }
    
    fn<MyObjA>({
       ~~~~~~
!!! error TS2559: Type 'MyObjA' has no properties in common with type 'ObjA'.
      a: {x: 'X', y: 'Y'},
      b: {},
    })
    